# fountain_scheme

./: Cargo.toml  README.md
examples/: hdpc_lt.rs  ldpc_lt.rs  lt.rs
src/: binary_hdpc_lt_scheme.rs  config.rs  hdpc_lt_scheme.rs  ldpc_lt_scheme.rs  lib.rs  lt_scheme.rs  math_utils.rs  types.rs
src/degree_sets/: config.rs  degree_dist.rs  degree_distribution.rs  degree_sampling.rs  deterministic_generator.rs  examples.rs  mod.rs  random.rs  random_generator.rs  random_triangular.rs  sampling.rs  set_sampling.rs  traits.rs  triangular.rs
src/parameters/: mod.rs  parameters.rs  r10.rs  rq_like.rs
src/precodes/: config.rs  gray.rs  hdpc.rs  hdpc_binary.rs  ldpc.rs  mod.rs
src/validation/: hdpc.rs  ldpc.rs  mod.rs  pseudo_rand.rs
tests/: binary_hdpc_test.rs  common.rs  hdpc_precode_test.rs  ldpc_precode_test.rs  linear_algebra_test.rs  lt_integration_test.rs  systematic_binary_hdpc_test.rs  systematic_hdpc_test.rs  systematic_ldpc_test.rs
